--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
 		"lint:spell": "cspell .",
 		"lint:dependencies": "knip --strict",
 		"lint:packages": "pnpm -w --filter=./packages/* run lint:package",
-		"lint:types": "attw --profile node16 --pack .",
+		"lint:types": "pnpm -w --filter=./packages/* run lint:type",
 		"lint:fix": "biome format --fix",
 		"format": "biome format --write",
 		"typecheck": "tsc --noEmit",
