--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
 		"format": "biome format --write",
 		"typecheck": "tsc --noEmit",
 		"bump": "bumpp",
+		"test": "pnpm -w --filter=./packages/* run test",
+		"coverage": "pnpm -w --filter=./packages/* run coverage",
 		"serve": "bun --hot example/hello.ts"
 	},
 	"devDependencies": {
