--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
 		"@arethetypeswrong/cli": "^0.18.2",
 		"@biomejs/biome": "^2.3.14",
 		"@types/bun": "^1.3.8",
+		"@types/node": "^25.2.1",
 		"@vitest/coverage-v8": "4.0.18",
 		"bumpp": "^10.4.1",
 		"cspell": "^9.4.0",
