--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -7,6 +7,9 @@ packages:
 
 blockExoticSubdeps: true
 
+onlyBuiltDependencies:
+  - esbuild
+
 trustPolicy: no-downgrade
 
 trustPolicyIgnoreAfter: 43200
