chore: bump version

--- a/biome.json
+++ b/biome.json
@@ -6,7 +6,10 @@
 		"indentStyle": "tab"
 	},
 	"linter": {
-		"enabled": false
+		"enabled": true
+	},
+	"assist": {
+		"enabled": true
 	},
 	"files": {
 		"includes": [
