fix: resolve knip strict lint failures
Add arktype, effect, and valibot to ignoreDependencies for the example
workspace and remove unused Method type export.

--- a/knip.jsonc
+++ b/knip.jsonc
@@ -3,7 +3,13 @@
 	"workspaces": {
 		"./example": {
 			"project": ["example/**/*.ts!"],
-			"ignoreDependencies": ["better-call", "zod"]
+			"ignoreDependencies": [
+				"better-call",
+				"zod",
+				"arktype",
+				"effect",
+				"valibot"
+			]
 		},
 		"./packages/*": {
 			"project": ["src/**/*.ts!"],
